--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" th:with="lang=${#locale.language}" th:lang="${lang}">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>SEVEN's test task</title>
