--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -10,6 +10,14 @@
             </div>
         </div>
     </div>
+
+<!--    <script type="text/javascript">
+        var i18n = [];
+
+        <c:forEach var='key' items='<%=new String[]{"common.deleted","common.saved","common.enabled","common.disabled","common.status", "users.edit", "meals.edit", "common.search"}%>'>
+        i18n['${key}'] = '<spring:message code="${key}"/>';
+        </c:forEach>
+    </script>-->
 </div>
 </body>
 
