--- a/src/main/resources/templates/fragments/includs.html
+++ b/src/main/resources/templates/fragments/includs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 <th:block th:fragment="ui">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,9 +20,9 @@
 
     <script src="/js/validator.min.js" defer></script>
 
-    <!--<meta name="_csrf" th:content="${_csrf.token}"/>-->
-    <!-- default header name is X-CSRF-TOKEN -->
-    <!--<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+     <!--default header name is X-CSRF-TOKEN -->
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </th:block>
 </head>
 </html>
